<resources>
    <string name="app_name">The Comics Lounge</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_version">The Comics Lounge v%1$s</string>
    <string name="login_btn_name">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="reg_agree_policy">I Agree to the terms of use</string>
    <string name="have_an_account_str">Have an account?</string>
    <string name="dont_have_ac">Don\'t have an account?</string>
    <string name="forgotusername_password_str">Forgot your password?</string>
    <string name="enter_email_add_heading">Enter Your Email Address</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="enter_pass_add_heading">Enter Your Password</string>
    <string name="login_btn_join_name">Login</string>
    <string name="enter_name_add_heading">Enter Your Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="sign_in_str">Sign in</string>
    <string name="forgotpass_dummy_str">We\'ll send you a OTP to reset it</string>
    <string name="register_email_add_heading">Registered Email</string>
    <string name="reser_str">Reset</string>
    <string name="resent_otp">Resend OTP?</string>
    <string name="know_password_str">Know your password?</string>
    <string name="current_event_str">Current Events</string>
    <string name="get_ticket">Get Tickets</string>
    <string name="calender_str">Calendar</string>
    <string name="suber_admin_str">Super User</string>
    <string name="dooor_open_str">DOORS OPEN:</string>
    <string name="dinner_str">DINNER:</string>
    <string name="show_str">SHOW:</string>
    <string name="descrition_str">DESCRIPTION</string>
    <string name="mobile_num_heading_str">Mobile Number?</string>
    <string name="mbile_num_enter_str">Enter your mobile number here to receive confirmation code</string>
    <string name="country_code_str">Country Code</string>
    <string name="enter_mobile_no_str">Enter Mobile Number</string>
    <string name="save_str">Save</string>
    <string name="email_confirm_code_str">Confirmation Email Code?</string>
    <string name="confirm_code_str">Confirmation Code ?</string>
    <string name="enter_confirm_code_str">Enter code for your Mobile Number Confirmation</string>
    <string name="enter_code_email">Enter OTP code sent to your email \n%s</string>
    <string name="enter_sms_code_str">Enter SMS Code</string>
    <string name="enter_email_code">Enter Email Code</string>
    <string name="done_str">Done</string>
    <string name="login_str">Log In</string>
    <string name="forgot_pasword_sec_str">Forgot Password</string>
    <string name="pls_try_again_str">Please try again</string>
    <string name="loding_str">Loading…</string>
    <string name="loading_str">Loading…</string>
    <string name="do_not_exit_str">Do not exit app before confirm your account?</string>
    <string name="otp_verfy_done">OTP verify successfully.</string>
    <string name="submit_str">Submit</string>
    <string name="contact_us_add_str">Level 1,26 Errol Street, North \nMelbourne 3051</string>
    <string name="app_email_str">info@thecomicslounge.com.au</string>
    <string name="app_phone_str">(03) 9348 9488</string>
    <string name="booking_history">Booking History</string>
    <string name="confirmed_tickets">Confirmed Tickets</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="contact_us_heading">Contact us</string>
    <string name="super_user_str">Super User</string>
    <string name="membership_str">Membership</string>
    <string name="free_ticket_str">Free Tickets</string>
    <string name="my_membership_tickets">Use My Membership Tickets</string>
    <string name="non_attendance_penalty">Non Attendance Penalty</string>
    <string name="first_last_name_str"><![CDATA[First & Last name]]></string>
    <string name="phone_str">Phone Number</string>
    <string name="password_str">Password</string>
    <string name="logout_str">Log Out</string>
    <string name="buy_tickets_str">Buy Tickets</string>
    <string name="select_dates_str">Select Date</string>
    <string name="tickets_type_str">Ticket Type</string>
    <string name="feat_video_str">Featured Videos</string>
    <string name="terms_condition_str">Terms Of Conditions</string>
    <string name="privacy_policy_str">Privacy Policy</string>
    <string name="member_ship_str">Buy Membership</string>
    <string name="checkout_str">Checkout</string>
    <string name="my_booking_str">My Booking</string>
    <string name="sub_total_str">SUBTOTAL</string>
    <string name="discount_str">Discount</string>
    <string name="tax_str">GST</string>
    <string name="total_str">Total:</string>
    <string name="zero_str">$0.00</string>
    <string name="process_to_pay">Process To Pay</string>
    <string name="join_membership">Join Membership</string>
    <string name="ticket_details_str">Tickets Details</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="download_tic">Download Tickets</string>
    <string name="show_only">Show Only</string>
    <string name="show_with_meal_str">Show with Meal</string>
    <string name="cancel_str">Cancel</string>
    <string name="zoom_image_view">Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_firstname_strr">Enter Your Firstname</string>
    <string name="enter_phon_no_str">Enter Your Phone Number</string>
    <string name="enter_country_code_str">Enter Your Country Code</string>
    <string name="update_profile_str">Update</string>
    <string name="apply">Apply</string>
    <string name="gold_pass_ticket">Gold Pass Tickets available for this show</string>
    <string name="pls_select_date">Please select date</string>
    <string name="pls_add_ticket">Please add ticket</string>
    <string name="data_not_found_long_str">Unfortunately data not found.</string>
    <string name="server_error_">An error occurred during connection with server, please again later!!!</string>
    <string name="working_internet_connection">Make sure you have working internet connection</string>
    <string name="no_internet_connection_str">No Internet Connection</string>
    <string name="no_internet_connection_str_msg">You are not connected to the Internet.Make sure WI-FI or Mobile Network is on, Airplane Mode is off and Retry it</string>
    <string name="retry_str">Retry</string>
    <string name="internet_not_found_str">Internet connection not found</string>
    <string name="action_not_found_str">Action not found</string>
    <string name="skip_str">SKIP</string>
    <string name="new_around_user">New around here?</string>
    <string name="cancelled">Cancelled</string>
    <string name="pls_select_before_close_date">Only book before event close date</string>
    <string name="someting_wrong">Something wrong try again.</string>
    <string name="ticket_not_avilble">ticket not available</string>
    <string name="paypal_success_value">Paypal Success</string>
    <string name="paypal_error_value">Paypal Error: %1$s</string>
    <string name="paypal_error_buyer_cancelled">Buyer canceled payment approval.</string>
    <string name="paypal_error_other_error">Other Error</string>
    <string name="server_error">Server Error</string>
    <string name="skip_small_str">Skip</string>
    <string name="update_available">New Version Available</string>
    <string name="update">UPDATE</string>
    <string name="no_thanks">NO, THANKS</string>
    <string name="no_membership_purchased">No membership purchased</string>
    <string name="no_free_tickets">You have no free tickets</string>
    <string name="current_password">Enter Your Current Password</string>
    <string name="new_password">Enter Your New Password</string>
    <string name="re_new_password">Re-type Your New Password</string>
    <string name="password_not_match">Re-type Does Not Match With New Password</string>
    <string name="Change">Change</string>
    <string name="change_pwd">Change Password</string>
    <string name="video">Video</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="email_sent">Email has been sent !!</string>
    <string name="email_sent_invalid">Email id is invalid !!</string>
    <string name="otp_validate">OTP is empty</string>
    <string name="email_not_blank">Email cannot be blank.</string>
    <string name="password_not_blank">Password cannot be blank</string>
    <string name="email_otp_verified">OTP verified successfully !!!</string>
    <string name="password_validation">Password must have 6 to 20 char, include 1 digit</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="login_failed">Login failed please try again</string>
    <string name="membership_buy">Membership Buy</string>
    <string name="promo_code_applied_value">Congratulations !! You got %1$s discount.</string>
    <string name="free_ticket_title">Free Ticket Info</string>
    <string name="free_ticket_info">One free pass for 2 people can be used as part of this booking.\n\n* limited to one free pass per booking</string>
    <string name="tickets_can_only">Tickets can only purchase before 6pm for each days event.</string>
    <string name="enquiries">please contact our office on 03 9348 9488 between 11am and 5:30pm </string>
    <string name="updating_moment">Wait for a moment, We are updating...</string>
    <string-array name="nav_menu_array">
        <item>Home</item>
        <item>Confirmed Tickets</item>
        <item>Calendar</item>
        <item>Membership video</item>
        <item>Buy Membership</item>
        <item>Claim Membership</item>
        <item>My Account</item>
        <item>Contact Us</item>
        <item>Booking History</item>
        <item>Terms and Conditions</item>
        
        <item>Privacy Policy</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_location_map">Map</string>
    <string name="we_locat_here">We\'re Located</string>
    <string name="google_map_address_str">"The Comic's Lounge \n28 errol street \nnorth bourne \n(03) 93483488"</string>
    <string name="for_twl_month_str">for 12 months</string>
    <string name="error_for_name">Please enter characters or alphabet in the name field</string>
    <string name="enter_8_above_num">Number must above 8 digits.</string>
    <string name="bookig_date_not_available">Booking date not available</string>
    <string name="pls_check_term_condition">Please check \"Terms and Conditions\"</string>
    <string name="country_str">Country</string>
    <string name="austraria_str">Australia</string>
    <string name="stae_str">State / Province / Region</string>
    <string name="city_str">City</string>
    <string name="mobile_number">Mobile Number?</string>
    <string name="_61">+61</string>
    <string name="confirm">Confirm</string>
    <string name="calendar">Calendar</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="sat">Sat</string>
    <string name="fri">Fri</string>
    <string name="type_your_city_here">Type your city here</string>
    <string name="contact_our_team">Contact our team</string>
    <string name="if_you_are_unable_to_find_answers_in_our_q_amp_a_section_please_add_your_comments_in_the_box_below_and_our_team_will_get_back_within_24_hours"><![CDATA[If you are unable to find answers in our Q&A section, please add your comments in the box below and our team will get back within 24 hours.]]></string>
    <string name="type_your_comments_here">Type your comments here...</string>
    <string name="no_events">No Events</string>
</resources>