<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="18dp"
        >
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_str"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:paddingTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edt"
            android:text="@string/austraria_str"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:paddingHorizontal="20dp"
            android:textSize="14dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="5dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stae_str"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16dp"
            android:layout_marginTop="18dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_edt"
            android:layout_marginTop="5dp"
            >
            <Spinner
                android:id="@+id/country_spn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_str"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="16dp"
            android:layout_marginTop="18dp"
            />

        <EditText
            android:singleLine="true"
            android:id="@+id/edt_city_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edt"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/type_your_city_here"
            android:paddingHorizontal="20dp"
            android:paddingTop="2dp"
            android:textColor="@color/black"
            android:textSize="14dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        style="@style/CalenderButton"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/process_to_pay" />
</LinearLayout>
