<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingHorizontal="24dp">
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/bt_back"
            android:src="@mipmap/ic_back"
            android:layout_width="29dp"
            android:layout_height="29dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/mobile_number"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/mbile_num_enter_str"
        android:textColor="@color/gray_1"
        android:textSize="14dp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/country_code_str"
        android:textColor="@color/gray_1"
        android:textSize="14dp" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="10dp"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_country_code"
            android:hint="@string/_61"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_2"
            android:textCursorDrawable="@drawable/edt_txt_cursor"
            android:textSize="14dp"
            android:background="@drawable/bg_edt"
            android:fontFamily="@font/roboto"
            android:maxLength="2"
            android:padding="15dp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_marginStart="15dp"
            android:id="@+id/mobile_no_edt"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_height="50dp"
            android:fontFamily="@font/roboto"
            android:textColorHint="@color/grey_2"
            android:textColor="@color/black"
            android:hint="@string/enter_mobile_no_str"
            android:textSize="14dp"
            android:background="@drawable/bg_edt"
            android:maxLength="2"
            android:padding="15dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_otp_btn"
        android:layout_gravity="center"
        android:layout_width="235dp"
        android:layout_height="61dp"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        android:background="@drawable/bg_button"
        android:text="@string/save_str" />
</LinearLayout>