<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FrmContactOurTeam"
    android:orientation="vertical"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:paddingHorizontal="24dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_our_team"
        android:layout_marginTop="16dp"
        android:textSize="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_you_are_unable_to_find_answers_in_our_q_amp_a_section_please_add_your_comments_in_the_box_below_and_our_team_will_get_back_within_24_hours"
        android:layout_marginTop="11dp"
        android:textSize="14dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/black"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_mess"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_mb_chat"
        android:padding="20dp"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:inputType="textMultiLine"
        android:textSize="14dp"
        android:textColor="@color/black"
        android:hint="@string/type_your_comments_here"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="@color/gray_1"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_submit"
        android:layout_gravity="center"
        android:layout_width="235dp"
        android:layout_height="64dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_semibold"
        android:background="@drawable/bg_button"
        android:text="@string/submit_str" />
</androidx.appcompat.widget.LinearLayoutCompat>