<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FrmCalendar"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="16dp"
            android:layout_marginStart="15dp"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:fontFamily="@font/poppins_semibold"/>
            <ImageView
                android:id="@+id/bt_toggle_calendar"
                android:layout_marginStart="10dp"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@mipmap/ic_up"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <RelativeLayout
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/bt_previous"
                android:layout_centerVertical="true"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@mipmap/ic_left"/>
            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="July 2024"
                android:id="@+id/tv_month"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:fontFamily="@font/poppins_semibold"/>
            <ImageView
                android:id="@+id/bt_next"
                android:layout_centerVertical="true"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@mipmap/ic_right"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_calendar"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginHorizontal="10dp"
                android:weightSum="7"
                android:layout_width="match_parent"
                android:layout_height="35dp">
                <TextView
                    android:textSize="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sun"
                    android:textAllCaps="true"
                    android:gravity="center"/>
                <TextView
                    android:textSize="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/mon"
                    android:textAllCaps="true"
                    android:gravity="center"/>
                <TextView
                    android:textSize="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tue"
                    android:textAllCaps="true"
                    android:gravity="center"/>
                <TextView
                    android:textSize="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/wed"
                    android:textAllCaps="true"
                    android:gravity="center"/>
                <TextView
                    android:textSize="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/thu"
                    android:textAllCaps="true"
                    android:gravity="center"/>
                <TextView
                    android:textSize="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/fri"
                    android:textAllCaps="true"
                    android:gravity="center"/>
                <TextView
                    android:textSize="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/grey_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/sat"
                    android:textAllCaps="true"
                    android:gravity="center"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginBottom="40dp"
                android:layout_marginHorizontal="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rcv_day"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/grey_5"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/tv_no_data"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_events"
            android:textAllCaps="true"
            android:textColor="@color/bg_splash"
            android:textSize="16dp"
            android:fontFamily="@font/poppins_bold"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginBottom="22dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rcv_event"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>